# stackage-server

./: .dir-locals.el  .ghci  .gitignore  .gitlab-ci.yml  .travis.yml  Application.hs  DevelMain.hs  Dockerfile  Echo.hs  Foundation.hs  Import.hs  LICENSE  Model.hs  README.md  Settings.hs  Types.hs  cabal.config  devel.hs  docker.sh  flake.nix  fpbuild.config  indices  justfile  package.nix  package.yaml  shell.nix  stack.yaml  stackage-server.cabal  stackage-server.yaml  upload-cabal-loader.sh
.azure/: azure-linux-template.yml  azure-pipelines.yml
.github/actions/stack-test/: action.yml
.github/workflows/: base.yml  build.yml  cache-warmup.yaml  runtime.yml  stack-test.yml
Control/: SingleRun.hs
Data/: BlobStore.hs  GhcLinks.hs  Hackage.hs  Slug.hs  Tag.hs  Unpacking.hs  WebsiteContent.hs
Data/Hackage/: DeprecationInfo.hs  Views.hs
Handler/: Alias.hs  Aliases.hs  BannedTags.hs  BuildPlan.hs  BuildVersion.hs  CompressorStatus.hs  Download.hs  DownloadStack.hs  Email.hs  Feed.hs  HackageSdist.hs  HackageViewIndex.hs  HackageViewSdist.hs  Haddock.hs  Home.hs  Hoogle.hs  MirrorStatus.hs  OldLinks.hs  Package.hs  PackageCounts.hs  PackageList.hs  Profile.hs  Progress.hs  RefreshDeprecated.hs  ResetToken.hs  Sitemap.hs  Snapshots.hs  StackageHome.hs  StackageIndex.hs  StackageSdist.hs  System.hs  Tag.hs  UploadStackage.hs  UploadV2.hs
Settings/: Development.hs
Stackage/: Database.hs
Stackage/Database/: Cron.hs  Haddock.hs  Types.hs
Stackage/Snapshot/: Diff.hs
app/: DevelMain.hs  cabal-loader.hs  devel.hs  main.hs  stackage-server-cron.hs
bench/: main.hs
config/: deploy.yaml  keter.yaml  models  postgresql.yml  robots.txt  routes  settings.yml  settings.yml-sample
docker/: Dockerfile  Dockerfile.base-build  Dockerfile.base-run  Dockerfile.runtime
etc/: build-deploy.sh  build_deploy.sh
etc/base-build/: Dockerfile
etc/docker/: Dockerfile  build.sh  push.sh
etc/helm/: Chart.yaml  values.yaml
etc/helm/templates/: NOTES.txt  _helpers.tpl  cron_deployment.yaml  deployment.yaml  hoogle_deployment.yaml  hoogle_service.yaml  ingress.yaml  service.yaml
etc/helm/values/: production.yaml  staging.yaml
etc/kube/: cron_deployment_template.yaml  deployment_template.yaml  hoogle_deployment_template.yaml  hoogle_service_template.yaml  ingress_template.yaml  service_template.yaml
etc/kubernetes/: deploy_rc.sh  stackage-server-prod-rc.yaml  stackage-server-prod-svc.yaml
etc/load-testing/: README.md  locustfile.py  requirements.txt
etc/scripts/: stage_docker.sh
nix/: amazonka-core.nix  amazonka-s3.nix  barrier.nix  crypton-connection.nix  gen-packages.sh  hix.nix  hoogle.nix  pantry.nix  safe.nix  stackage-server.nix  tls.nix
src/: Application.hs  Foundation.hs  Import.hs  Settings.hs  Types.hs
src/Control/: SingleRun.hs
src/Data/: GhcLinks.hs  WebsiteContent.hs
src/Distribution/Package/: ModuleForest.hs
src/Handler/: Blog.hs  BuildPlan.hs  BuildVersion.hs  Download.hs  DownloadStack.hs  Feed.hs  Haddock.hs  Home.hs  Hoogle.hs  MirrorStatus.hs  OldLinks.hs  Package.hs  PackageDeps.hs  PackageList.hs  Sitemap.hs  Snapshots.hs  StackageHome.hs  StackageIndex.hs  StackageSdist.hs  Stats.hs  System.hs
src/Handler/StackageHome/: Types.hs
src/Settings/: StaticFiles.hs
src/Stackage/: Database.hs  Metadata.hs  Types.hs
src/Stackage/Database/: Cron.hs  Github.hs  Haddock.hs  PackageInfo.hs  Query.hs  Schema.hs  Types.hs
src/Stackage/PackageIndex/: Conduit.hs
src/Stackage/Snapshot/: Diff.hs
static/: opensearchhoogle.xml  opensearchpackage.xml
static/css/: bootstrap.css  bootstrap.responsive.css
static/haddock/: script.js  style.css
static/js/: highlight.js
static/setup/linux64/: ghc-7.8-links.yaml  stackage-setup
templates/: all-snapshots.hamlet  all-snapshots.lucius  banned-tags.hamlet  banned-tags.lucius  blog-post.hamlet  blog-post.lucius  default-layout-wrapper.hamlet  default-layout.hamlet  default-layout.lucius  doc-list.hamlet  download-stack-list.hamlet  download.hamlet  downloadExe.hamlet  home.hamlet  home.lucius  homepage.hamlet  homepage.lucius  hoogle-form.hamlet  hoogle-form.lucius  hoogle.hamlet  hoogle.julius  hoogle.lucius  package-counts.hamlet  package-counts.lucius  package-list.hamlet  package-list.lucius  package-snapshots.hamlet  package.hamlet  package.julius  package.lucius  profile.hamlet  profile.lucius  snapshots-nav.hamlet  spam-package.hamlet  stackage-diff.hamlet  stackage-diff.lucius  stackage-home.hamlet  stackage-home.lucius  tag-list.hamlet  tag-list.lucius  (+5 more)
test/: TestImport.hs  main.hs
test/Data/: SlugSpec.hs
unit-tests/: main.hs
