name:              stackage-server
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Echo
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Data.Slug
                     Data.Tag
                     Data.GhcLinks
                     Data.WebsiteContent
                     Types

                     -- once stabilized, will likely move into its own package
                     Stackage.Database
                     Stackage.Database.Haddock
                     Stackage.Database.Types
                     Stackage.Database.Cron

                     Handler.Home
                     Handler.Snapshots
                     Handler.StackageHome
                     Handler.StackageIndex
                     Handler.StackageSdist
                     Handler.System
                     Handler.Haddock
                     Handler.Hoogle
                     Handler.Package
                     Handler.PackageList
                     Handler.BuildVersion
                     Handler.Sitemap
                     Handler.BuildPlan
                     Handler.Download
                     Handler.OldLinks

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TypeSynonymInstances
                FlexibleInstances
                RankNTypes
                FunctionalDependencies
                PatternGuards
                StandaloneDeriving
                UndecidableInstances
                RecordWildCards
                ScopedTypeVariables
                BangPatterns
                TupleSections
                DeriveGeneric
                DeriveFunctor
                DeriveFoldable
                DeriveTraversable
                LambdaCase

    build-depends:
                    base                          >= 4
                  , aeson                         >= 0.6
                  , aws
                  , base16-bytestring
                  , blaze-markup                  >= 0.6
                  , byteable
                  , bytestring                    >= 0.9
                  , classy-prelude-yesod          >= 0.9.2 && < 0.12
                  , conduit                       >= 1.0
                  , conduit-extra
                  , cryptohash
                  , cryptohash-conduit            >= 0.1.1
                  , data-default
                  , directory                     >= 1.1
                  , email-validate
                  , esqueleto
                  , exceptions
                  , fast-logger                   >= 2.1.4
                  , foreign-store
                  , ghc-prim
                  , hjsmin                        >= 0.1
                  , html-conduit
                  , http-conduit                  >= 2.1.2.3
                  , monad-control                 >= 0.3
                  , monad-logger                  >= 0.3.6
                  , mtl                           >= 2.1
                  , mwc-random                    >= 0.13
                  , persistent                    >= 1.3.1
                  , persistent-template           >= 1.3
                  , resourcet                     >= 1.1.2
                  , shakespeare                   >= 2.0
                  , system-fileio
                  , system-filepath
                  , tar                           >= 0.4
                  , template-haskell
                  , temporary-rc                  >= 1.2
                  , text                          >= 0.11
                  , wai                           >= 2.1
                  , wai-extra                     >= 2.1
                  , wai-logger                    >= 2.1
                  , warp                          >= 2.1
                  , xml-conduit < 1.3
                  , yaml                          >= 0.8
                  , yesod                         >= 1.2.5
                  , yesod-auth                    >= 1.3
                  , yesod-core                    >= 1.2.19
                  , yesod-form                    >= 1.3.14
                  , yesod-static                  >= 1.2 && < 1.5
                  , zlib
                  , unordered-containers
                  , hashable
                 -- Avoid https://github.com/haskell/cabal/issues/1202
                 , Cabal >= 1.18
                 , lifted-base
                 , mono-traversable
                 , time
                 , process
                 , old-locale
                 , th-lift
                 , mime-types
                 , unix
                 , markdown >= 0.1.13
                 , formatting
                 , blaze-html
                 , haddock-library
                 , async
                 , yesod-gitrepo >= 0.1.1 && < 0.2
                 , hoogle
                 , spoon
                 , deepseq
                 , deepseq-generics
                 , auto-update
                 , stackage-types >= 1.0.1.1
                 , stackage-build-plan >= 0.1.1
                 , yesod-sitemap
                 , streaming-commons
                 , classy-prelude-conduit
                 , path-pieces
                 , persistent-sqlite
                 , stackage-metadata >= 0.2
                 , filepath
                 , http-client
                 , http-types
                 , amazonka
                 , amazonka-core
                 , amazonka-s3
                 , lens

executable         stackage-server
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , stackage-server
                     , yesod

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

executable         stackage-server-cron
    if flag(library-only)
        Buildable: False

    main-is:           stackage-server-cron.hs
    hs-source-dirs:    app
    build-depends:     base, stackage-server

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    build-depends: base
                 , stackage-server
                 , yesod-test >= 1.2
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
                 , classy-prelude-yesod
                 , mtl
                 , mwc-random
