name:              stackage-server
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Settings
                     Settings.StaticFiles
                     Data.GhcLinks
                     Data.WebsiteContent
                     Distribution.Package.ModuleForest
                     Types

                     -- once stabilized, will likely move into its own package
                     Stackage.Database
                     Stackage.Database.Haddock
                     Stackage.Database.Types
                     Stackage.Database.Cron
                     Stackage.Snapshot.Diff

                     Handler.Home
                     Handler.Snapshots
                     Handler.StackageHome
                     Handler.StackageIndex
                     Handler.StackageSdist
                     Handler.System
                     Handler.Haddock
                     Handler.Hoogle
                     Handler.Package
                     Handler.PackageList
                     Handler.BuildVersion
                     Handler.Sitemap
                     Handler.BuildPlan
                     Handler.Download
                     Handler.OldLinks
                     Handler.Feed
                     Handler.DownloadStack
                     Handler.MirrorStatus
                     Control.SingleRun

    hs-source-dirs: src

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TypeSynonymInstances
                FlexibleInstances
                RankNTypes
                FunctionalDependencies
                PatternGuards
                StandaloneDeriving
                UndecidableInstances
                RecordWildCards
                ScopedTypeVariables
                BangPatterns
                TupleSections
                DeriveGeneric
                DeriveFunctor
                DeriveFoldable
                DeriveTraversable
                LambdaCase

    build-depends:
                    base
                  , aeson
                  , aws
                  , barrier
                  , base16-bytestring
                  , blaze-markup
                  , byteable
                  , bytestring
                  , classy-prelude
                  , classy-prelude-yesod
                  , conduit
                  , conduit-extra
                  , cryptohash
                  , cryptohash-conduit
                  , data-default
                  , directory
                  , email-validate
                  , esqueleto
                  , exceptions
                  , fast-logger
                  , foreign-store
                  , ghc-prim
                  , hjsmin
                  , html-conduit
                  , http-conduit
                  , monad-control
                  , monad-logger
                  , mtl
                  , mwc-random
                  , prometheus-client
                  , prometheus-metrics-ghc
                  , persistent
                  , persistent-template
                  , resourcet
                  , shakespeare
                  , system-fileio
                  , system-filepath
                  , tagstream-conduit
                  , tar
                  , template-haskell
                  , temporary-rc
                  , text
                  , these
                  , wai
                  , wai-extra
                  , wai-logger
                  , wai-middleware-prometheus
                  , warp
                  , xml-conduit
                  , xml-types
                  , yaml
                  , yesod
                  , yesod-auth
                  , yesod-core
                  , yesod-form
                  , yesod-newsfeed
                  , yesod-static
                  , zlib
                  , unordered-containers
                  , hashable
                  , Cabal
                  , lifted-base
                  , mono-traversable
                  , time
                  , process
                  , old-locale
                  , th-lift
                  , mime-types
                  , unix
                  , markdown
                  , formatting
                  , blaze-html
                  , haddock-library
                  , async
                  , yesod-gitrepo
                  , hoogle
                  , spoon
                  , deepseq
                  , deepseq-generics
                  , auto-update
                  , stackage-curator
                  , yesod-sitemap
                  , streaming-commons
                  , classy-prelude-conduit
                  , path-pieces
                  , persistent-postgresql
                  , stackage-metadata
                  , filepath
                  , http-client
                  , http-types
                  , amazonka
                  , amazonka-core
                  , amazonka-s3
                  , lens
                  , file-embed
                  , resource-pool

executable         stackage-server
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , stackage-server
                     , yesod

    ghc-options:       -threaded -O2 -rtsopts "-with-rtsopts=-N -T"

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TypeSynonymInstances
                FlexibleInstances
                RankNTypes
                FunctionalDependencies
                PatternGuards
                StandaloneDeriving
                UndecidableInstances
                RecordWildCards
                ScopedTypeVariables
                BangPatterns
                TupleSections
                DeriveGeneric
                DeriveFunctor
                DeriveFoldable
                DeriveTraversable
                LambdaCase

executable         stackage-server-cron
    if flag(library-only)
        Buildable: False

    main-is:           stackage-server-cron.hs
    hs-source-dirs:    app
    build-depends:     base, stackage-server

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TypeSynonymInstances
                FlexibleInstances
                RankNTypes
                FunctionalDependencies
                PatternGuards
                StandaloneDeriving
                UndecidableInstances
                RecordWildCards
                ScopedTypeVariables
                BangPatterns
                TupleSections
                DeriveGeneric
                DeriveFunctor
                DeriveFoldable
                DeriveTraversable
                LambdaCase
